align bars correctly and draw avg of highway bars

--- a/style.css
+++ b/style.css
@@ -43,3 +43,7 @@ label {
 .bar {
     fill: steelblue;
 }
+
+.bar2 {
+    fill: steelblue;
+}
